--- a/style.css
+++ b/style.css
@@ -6,7 +6,8 @@ body{
     margin: 0;
     padding: 0;
     background-color: #171420;
-    position: relative;
+/*     position: relative; */
+    overflow :hidden;
 }
 #head{
     display: flex;
