--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body{
     padding: 0;
     background-color: #171420;
 /*     position: relative; */
-    overflow-x :hidden;
+/*     overflow-x :hidden; */
 }
 #head{
     display: flex;
